Update bootstrap files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<h1>Ahoy!</h1>
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+    <meta charset="utf-8" />
+    <title>open fsharp workshop</title>
+</head>
+
+<body>
+    <h1>DIY Comments With F# and Azure Functions</h1>
+    <button type="button" onclick="OnClick()">Click Me!</button>
+
+    <script type="text/javascript" src="ofscomments.js"></script>
+</body>
+
+</html>
