Client loads comments from the server at page load time and inserts them into the page

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
 <body>
     <h1>DIY Comments With F# and Azure Functions</h1>
-    <button type="button" onclick="OnClick()">Click Me!</button>
-
+    <div id="ofs-comments"/>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="ofscomments.js"></script>
+    <script type="text/javascript">OFSCommentsInit("123");</script>
 </body>
 
 </html>
