Add some basic CSS to make things look better

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 <head>
     <meta charset="utf-8" />
     <title>open fsharp workshop</title>
+    <style>
+        .ofs-comment {
+            border: 1px solid black;
+            padding: 0.5em;
+            margin: 1em
+        }
+        .ofs-error {
+            color:red;
+            font-weight: bold;
+        }
+    </style>
 </head>
 
 <body>
