--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             font-weight: bold;
         }
     </style>
+    <script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 
 <body>
